# Idris

./: CHANGELOG  Main.lhs  Makefile  RunIO.hs  Setup.lhs  TODO  idris.cabal
Idris/: AbsSyntax.lhs  Compiler.lhs  ConTrans.lhs  Context.lhs  Fontlock.lhs  LambdaLift.lhs  Latex.lhs  Lexer.hs  Lexer.lhs  Lib.lhs  MakeTerm.lhs  PMComp.lhs  Parser.y  PartialEval.lhs  Prover.lhs  RunIO.hs  SCTrans.lhs  Serialise.lhs  SimpleCase.lhs
lib/: Prelude.e  bool.idr  builtins.idr  either.idr  io.idr  list.idr  maybe.idr  nat.idr  perm.idr  prelude.idr  string.idr  tactics.idr  vect.idr
notes/: compiler_plan.txt  example.idr  vect.idr
papers/IFL2008/: Makefile  casestudy.tex  conclusion.tex  examples.tex  ifl08.tex  interactive.tex  intro.tex  ioforeign.tex  literature.bib  macros.ltx
papers/tutorial/: Makefile  example.tex  example1.idr  features.tex  firstex.tex  intro.tex  library.tex  macros.ltx  tutorial.tex
samples/: adder.idr  concurrent.idr  dsl.idr  hello.idr  interp.idr  io.idr  ioref.idr  member.idr  nat.idr  partition.idr  simple.idr  vect.idr
tests/: TODO  mktest.pl
tests/test001/: expected  main  run  test001.idr
tests/test002/: expected  run  test002.idr
tests/test003/: expected  run  test003.idr
tests/test004/: env.idr  expected  handle.idr  infile-random  infile-small-random  listmem.idr  lotsdatafile  run  simplefile.idr  test004.idr
tests/test005/: expected  run  test005.idr
web/tutorial/: Makefile  datafun.idr  donotation.idr  first.idr  foreign.idr  interp.idr  iofns.idr  monads.idr  primitives.idr  provisional.idr  specialise.idr  stdlib.idr  template.idr  theorems.idr  tutorial.css  tutorial.html  views.idr
